added sections and styles

--- a/landing.html
+++ b/landing.html
@@ -74,17 +74,260 @@
 			</span></p>
 		</div>
 	</nav>
-	<header>
+	<!-- header | tittle  -->
+	<header class="header">
 		<div class="header-img">
 			<img src="/media/images/rc-car.PNG" alt="coche azul derrapando">
 		</div>
-		<h1></h1>
+		<div class="header-tittle">
+			<h1>¡Empieza a vender tus productos de radiocontrol hoy mismo!</h1>
+			<h2>
+				Descarga nuestra app y encuentra las mejores ofertas</h2>
+			<div class="app-store">
+				<img src="/media/images/google-store.png" class="app-icon" alt="icono google store">
+				<img src="/media/images/apple-store.png" class="app-icon" alt="icono apple store">
+			</div>
+		</div>
 	</header>
+	<!-- section categories -->
+	<section class="categories">
+		<div class="categories-container">
+			<div class="categories-tittle">
+				<h2>Categorias destacadas</h2>
+			</div>
+			<div class="category-container">
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Coches RC
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER COCHES</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Drones
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER DRONES</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Aviones
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER AVIONES</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Barcos
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER BARCOS</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Electronica
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER ELECTRONICA</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Repuestos
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER REPUESTOS</a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- section novedades -->
 	<section class="news">
 		<div class="news-container">
-			<div>
-				h2
+			<div class="news-tittle">
+				<h2>Descubre las ultimas novedades</h2>
+			</div>
+			<div class="cards-container">
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
