--- a/index.html
+++ b/index.html
@@ -23,32 +23,312 @@
 </head>
 
 <body>
+	<!-- nav | mobile + desktop + aviso -->
 	<nav>
-		<div class="mobile-nav show-on-mobile" role="navigation">
-			<div class="logo-container">
-				<img src="/media/images/rc-bazaar-logo-transp.png" alt="logo bazaar transparente">
+		<div class="nav-container">
+			<!-- nav movil -->
+			<div class="mobile-nav show-on-mobile" role="navigation">
+				<div class="logo-container">
+					<img src="/media/images/rc-bazaar-logo-transp.png" 
+					class="logos" alt="logo bazaar transparente">
+				</div>
+				<div class="search-container">
+					<input type="search" name="search" 
+					id="searching" placeholder="Que estas buscando?"
+					class="searcher">
+				</div>
+				<div>
+					<a href="inicio-sesion">
+						<img src="/media/images/login-icon.png"
+						class="logos" alt="icono login">
+					</a>
+				</div>
 			</div>
-			<div>
-				<input type="search" name="search" id="searching" placeholder="Que estas buscando?">
-			</div>
-			<div>
-				<a href="inicio-sesion">
-					<img src="/media/images/login-icon.png" alt="icono login">
-				</a>
+			<!-- nav desktop -->
+			<div class="desktop-nav show-on-desktop" role="navigation">
+				<div class="logo-container">
+					<img src="/media/images/rc-bazaar-logo-transp.png" alt="logo bazaar transparente">
+				</div>
+				<div class="search-container">
+					<input type="search" name="search" 
+					id="searching" placeholder="Que estas buscando?"
+					class="searcher">
+					
+				</div>
+				<div class="button-container">
+					<button class="button-ini">
+						<a href="inicio-sesion">Registrate o Inicia sesion
+						</a>
+						<img src="/media/images/ini-icon.jpg"
+								class="icon" alt="icono inicio sesion">
+					</button>
+				</div>
 			</div>
 		</div>
-		<div class="desktop-nav show-on-desktop" role="navigation">
-			<div class="logo-container">
-				<img src="/media/images/rc-bazaar-logo-transp.png" alt="logo bazaar transparente">
-			</div>
-			<div>
-				<input type="search" name="search" id="searching" placeholder="Que estas buscando?">
-			</div>
-			<div>
-				<button>
-					<a href="inicio-sesion">Registrate o Inicia sesion</a>
-				</button>
-			</div>
+		<!-- aviso -->
+		<div class="warning">
+			<p class="warning">Descarga nuestra App <span>
+				<a href="#">
+					<img src="/media/images/descarga-icon.png" alt="icono descarga">
+				</a>
+			</span></p>
 		</div>
 	</nav>
+	<!-- header | tittle  -->
+	<header class="header">
+		<div class="header-img">
+			<img src="/media/images/rc-car.PNG" alt="coche azul derrapando">
+		</div>
+		<div class="header-tittle">
+			<h1>¡Empieza a vender tus productos de radiocontrol hoy mismo!</h1>
+			<h2>
+				Descarga nuestra app y encuentra las mejores ofertas</h2>
+			<div class="app-store">
+				<img src="/media/images/google-store.png" class="app-icon" alt="icono google store">
+				<img src="/media/images/apple-store.png" class="app-icon" alt="icono apple store">
+			</div>
+		</div>
+	</header>
+	<!-- section categories -->
+	<section class="categories">
+		<div class="categories-container">
+			<div class="categories-tittle">
+				<h2>Categorias destacadas</h2>
+			</div>
+			<div class="category-container">
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Coches RC
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER COCHES</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Drones
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER DRONES</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Aviones
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER AVIONES</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Barcos
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER BARCOS</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Electronica
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER ELECTRONICA</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card-category">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="category-text">
+								Repuestos
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER REPUESTOS</a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- section novedades -->
+	<section class="news">
+		<div class="news-container">
+			<div class="news-tittle">
+				<h2>Descubre las ultimas novedades</h2>
+			</div>
+			<div class="cards-container">
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
