added img, and style

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<div class="category-container">
 				<div class="card-category">
 					<div class="card-image">
-						<img src="/media/images/space-image.png" alt="espacio para imagen">
+						<img src="/media/images/coche.png" alt="espacio para imagen">
 					</div>
 					<div class="card-text">
 						<div class="card-description">
@@ -115,7 +115,7 @@
 				</div>
 				<div class="card-category">
 					<div class="card-image">
-						<img src="/media/images/space-image.png" alt="espacio para imagen">
+						<img src="/media/images/drone.png" alt="espacio para imagen">
 					</div>
 					<div class="card-text">
 						<div class="card-description">
@@ -132,7 +132,7 @@
 				</div>
 				<div class="card-category">
 					<div class="card-image">
-						<img src="/media/images/space-image.png" alt="espacio para imagen">
+						<img src="/media/images/avion.png" alt="espacio para imagen">
 					</div>
 					<div class="card-text">
 						<div class="card-description">
@@ -149,7 +149,7 @@
 				</div>
 				<div class="card-category">
 					<div class="card-image">
-						<img src="/media/images/space-image.png" alt="espacio para imagen">
+						<img src="/media/images/barco.png" alt="espacio para imagen">
 					</div>
 					<div class="card-text">
 						<div class="card-description">
@@ -166,7 +166,7 @@
 				</div>
 				<div class="card-category">
 					<div class="card-image">
-						<img src="/media/images/space-image.png" alt="espacio para imagen">
+						<img src="/media/images/electronica.png" alt="espacio para imagen">
 					</div>
 					<div class="card-text">
 						<div class="card-description">
@@ -183,7 +183,7 @@
 				</div>
 				<div class="card-category">
 					<div class="card-image">
-						<img src="/media/images/space-image.png" alt="espacio para imagen">
+						<img src="/media/images/repuestos.png" alt="espacio para imagen">
 					</div>
 					<div class="card-text">
 						<div class="card-description">
