added section blog

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 			</div>
 		</div>
 	</header>
-	<!-- section categories -->
+	<!-- section | categories -->
 	<section class="categories">
 		<div class="categories-container">
-			<div class="categories-tittle">
+			<div class="news-tittle">
 				<h2>Categorias destacadas</h2>
 			</div>
 			<div class="category-container">
@@ -201,11 +201,148 @@
 			</div>
 		</div>
 	</section>
-	<!-- section novedades -->
+	<div class="divisor-purple"></div>
+	<!-- section | novedades -->
 	<section class="news">
 		<div class="news-container">
 			<div class="news-tittle">
 				<h2>Descubre las ultimas novedades</h2>
+			</div>
+			<div class="cards-container">
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-ini">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- section |blog  -->
+	<section class="blog">
+		<div>
+			BLOG
+		</div>
+	</section>
+	<!-- section | near you -->
+	<section class="near-you">
+		<div class="news-container">
+			<div class="news-tittle">
+				<h2>Descubre productos cerca de ti</h2>
 			</div>
 			<div class="cards-container">
 				<div class="card">
