--- a/index.html
+++ b/index.html
@@ -333,9 +333,31 @@
 		</div>
 	</section>
 	<!-- section |blog  -->
-	<section class="blog">
-		<div>
-			BLOG
+	<section class="forum">
+		<div class="forum-container">
+			<div class="forum-tittle">
+				<h2>Aporte de la comunidad</h2>
+			</div>
+			<div class="feature">
+				<h3>tutoriales</h3>
+				<p>descubre aqui montajes, configuraciones...</p>
+				<a href="#">ver tutoriales</a>
+			</div>
+			<div class="feature">
+				<h3>Consejos</h3>
+				<p>tips y recomendaciones de la comunidad</p>
+				<a href="#">ver consejos</a>
+			</div>
+			<div class="feature">
+				<h3>Setup´s</h3>
+				<p>curiosea las configuraciones de otros usuari@s</p>
+				<a href="">ver setup´s</a>
+			</div>
+			<div class="feature">
+				<h3>Galeria</h3>
+				<p>Explora nuestra galería y descubre más.</p>
+				<a href="">ver galeria</a>
+			</div>
 		</div>
 	</section>
 	<!-- section | near you -->
