--- a/index.html
+++ b/index.html
@@ -26,21 +26,18 @@
 	<!-- nav | mobile + desktop + aviso -->
 	<nav>
 		<div class="nav-container">
-			<!-- nav movil -->
+			<!-- nav mobile -->
 			<div class="mobile-nav show-on-mobile" role="navigation">
 				<div class="logo-container">
-					<img src="/media/images/rc-bazaar-logo-transp.png" 
-					class="logos" alt="logo bazaar transparente">
+					<img src="/media/images/rc-bazaar-logo-transp.png" class="logos" alt="logo bazaar transparente">
 				</div>
 				<div class="search-container">
-					<input type="search" name="search" 
-					id="searching" placeholder="Que estas buscando?"
-					class="searcher">
+					<input type="search" name="search" id="searching" placeholder="Que estas buscando?"
+						class="searcher">
 				</div>
 				<div>
 					<a href="inicio-sesion">
-						<img src="/media/images/login-icon.png"
-						class="logos" alt="icono login">
+						<img src="/media/images/login-icon.png" class="logos" alt="icono login">
 					</a>
 				</div>
 			</div>
@@ -50,17 +47,15 @@
 					<img src="/media/images/rc-bazaar-logo-transp.png" alt="logo bazaar transparente">
 				</div>
 				<div class="search-container">
-					<input type="search" name="search" 
-					id="searching" placeholder="Que estas buscando?"
-					class="searcher">
-					
+					<input type="search" name="search" id="searching" placeholder="Que estas buscando?"
+						class="searcher">
+
 				</div>
 				<div class="button-container">
 					<button class="button-ini">
 						<a href="inicio-sesion">Registrate o Inicia sesion
 						</a>
-						<img src="/media/images/ini-icon.jpg"
-								class="icon" alt="icono inicio sesion">
+						<img src="/media/images/ini-icon.jpg" class="icon" alt="icono inicio sesion">
 					</button>
 				</div>
 			</div>
@@ -68,10 +63,10 @@
 		<!-- aviso -->
 		<div class="warning">
 			<p class="warning">Descarga nuestra App <span>
-				<a href="#">
-					<img src="/media/images/descarga-icon.png" alt="icono descarga">
-				</a>
-			</span></p>
+					<a href="#">
+						<img src="/media/images/descarga-icon.png" alt="icono descarga">
+					</a>
+				</span></p>
 		</div>
 	</nav>
 	<!-- header | tittle  -->
@@ -86,6 +81,15 @@
 			<div class="app-store">
 				<img src="/media/images/google-store.png" class="app-icon" alt="icono google store">
 				<img src="/media/images/apple-store.png" class="app-icon" alt="icono apple store">
+			</div>
+		</div>
+	<div class="divisor-blue"></div>
+		<div class="header-tittle">
+			<h2>¡Vende lo que no usas y gana un dinero extra en RC BAZAAR!</h2>
+			<div class="view-button">
+				<button class="button-view">
+					<a href="#">VENDER YA</a>
+				</button>
 			</div>
 		</div>
 	</header>
@@ -107,7 +111,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER COCHES</a>
 							</button>
 						</div>
@@ -124,7 +128,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER DRONES</a>
 							</button>
 						</div>
@@ -141,7 +145,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER AVIONES</a>
 							</button>
 						</div>
@@ -158,7 +162,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER BARCOS</a>
 							</button>
 						</div>
@@ -175,7 +179,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER ELECTRONICA</a>
 							</button>
 						</div>
@@ -192,8 +196,8 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
-								<a href="#">VER REPUESTOS</a>
+							<button class="button-view">
+								<a href="#">VER REPUESTOS Y ACCESORIOS</a>
 							</button>
 						</div>
 					</div>
@@ -223,7 +227,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -243,7 +247,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -263,7 +267,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -283,7 +287,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -303,7 +307,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -323,7 +327,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -381,7 +385,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -401,7 +405,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -421,7 +425,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -441,7 +445,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -461,7 +465,7 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
@@ -481,13 +485,35 @@
 							</p>
 						</div>
 						<div class="view-button">
-							<button class="button-ini">
+							<button class="button-view">
 								<a href="#">VER</a>
 							</button>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+	<!-- section | promo -->
+	<section class="promo">
+		<p>RC BAZAAR es una comunidad para los entusiastas del radiocontrol, donde puedes comprar, vender, compartir,
+			aprender y mucho mas.
+		</p>
+		<p>Ahorras dinero y promueves un consumo responsable al reutilizar
+			productos.</p>
+		<p>Únete a RC BAZAAR y disfruta
+			de tu hobby de forma más sostenible y económica.</p>
+		<div class="view-button">
+			<button class="button-view">
+				<a href="#">Registrate! es gratis!</a>
+			</button>
+		</div>
+		<p>Siguenos en:</p>
+		<div class="logo-promo-container">
+			<img src="/media/images/logo-x.png" class="logos" alt="logo x">
+			<img src="/media/images/logo-fb.png" class="logos" alt="logo facebook">
+			<img src="/media/images/linkedin-logo.png" class="logos" alt="logo linkedin">
+			<img src="/media/images/logo-instagram.png" class="logos" alt="logo instagram">
 		</div>
 	</section>
 </body>
