--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<img src="/media/images/apple-store.png" class="app-icon" alt="icono apple store">
 			</div>
 		</div>
-	<div class="divisor-blue"></div>
+	<div class="divisor-purple"></div>
 		<div class="header-tittle">
 			<h2>¡Vende lo que no usas y gana un dinero extra en RC BAZAAR!</h2>
 			<div class="view-button">
@@ -213,6 +213,46 @@
 				<h2>Descubre las ultimas novedades</h2>
 			</div>
 			<div class="cards-container">
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
 				<div class="card">
 					<div class="card-image">
 						<img src="/media/images/space-image.png" alt="espacio para imagen">
@@ -491,6 +531,46 @@
 						</div>
 					</div>
 				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -499,8 +579,6 @@
 		<p>RC BAZAAR es una comunidad para los entusiastas del radiocontrol, donde puedes comprar, vender, compartir,
 			aprender y mucho mas.
 		</p>
-		<p>Ahorras dinero y promueves un consumo responsable al reutilizar
-			productos.</p>
 		<p>Únete a RC BAZAAR y disfruta
 			de tu hobby de forma más sostenible y económica.</p>
 		<div class="view-button">
