--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<!-- nav mobile -->
 			<div class="mobile-nav show-on-mobile" role="navigation">
 				<div class="logo-container">
-					<img src="/media/images/rc-bazaar-logo-transp.png" class="logos" alt="logo bazaar transparente">
+					<img src="/media/images/menu-hamburguesa-rayas.png"	class="logos" alt="menu hamburguesa blanco">
 				</div>
 				<div class="search-container">
 					<input type="search" name="search" id="searching" placeholder="Que estas buscando?"
@@ -83,7 +83,7 @@
 				<img src="/media/images/apple-store.png" class="app-icon" alt="icono apple store">
 			</div>
 		</div>
-	<div class="divisor-purple"></div>
+		<div class="divisor-purple"></div>
 		<div class="header-tittle">
 			<h2>¡Vende lo que no usas y gana un dinero extra en RC BAZAAR!</h2>
 			<div class="view-button">
@@ -376,34 +376,6 @@
 			</div>
 		</div>
 	</section>
-	<!-- section |blog  -->
-	<section class="forum">
-		<div class="forum-tittle">
-			<h2>Aporte de la comunidad</h2>
-		</div>
-		<div class="forum-container">
-			<div class="feature">
-				<h3>tutoriales</h3>
-				<p>descubre aqui montajes, configuraciones...</p>
-				<a href="#">ver tutoriales</a>
-			</div>
-			<div class="feature">
-				<h3>Consejos</h3>
-				<p>tip´s y recomendaciones de la comunidad</p>
-				<a href="#">ver consejos</a>
-			</div>
-			<div class="feature">
-				<h3>Galeria</h3>
-				<p>Explora nuestra galería y descubre más.</p>
-				<a href="">ver galeria</a>
-			</div>
-			<div class="feature">
-				<h3>Setup´s</h3>
-				<p>configuraciones de otros usuari@s</p>
-				<a href="">ver setup´s</a>
-			</div>
-		</div>
-	</section>
 	<!-- section | near you -->
 	<section class="near-you">
 		<div class="news-container">
@@ -574,6 +546,37 @@
 			</div>
 		</div>
 	</section>
+	<!-- section |blog  -->
+	<section class="forum">
+		<div class="header-img">
+			<img src="/media/images/drift-car.png" alt="coche azul derrapando">
+		</div>
+		<div class="forum-tittle">
+			<h2>Aporte de la comunidad</h2>
+		</div>
+		<div class="forum-container">
+			<div class="feature">
+				<h3>tutoriales</h3>
+				<p>descubre aqui montajes, configuraciones...</p>
+				<a href="#">ver tutoriales</a>
+			</div>
+			<div class="feature">
+				<h3>Consejos</h3>
+				<p>tip´s y recomendaciones de la comunidad</p>
+				<a href="#">ver consejos</a>
+			</div>
+			<div class="feature">
+				<h3>Galeria</h3>
+				<p>Explora nuestra galería y descubre más.</p>
+				<a href="">ver galeria</a>
+			</div>
+			<div class="feature">
+				<h3>Setup´s</h3>
+				<p>configuraciones de otros usuari@s</p>
+				<a href="">ver setup´s</a>
+			</div>
+		</div>
+	</section>
 	<!-- section | promo -->
 	<section class="promo">
 		<p>RC BAZAAR es una comunidad para los entusiastas del radiocontrol, donde puedes comprar, vender, compartir,
@@ -585,6 +588,11 @@
 			<button class="button-view">
 				<a href="#">Registrate! es gratis!</a>
 			</button>
+		</div>
+		<p>Puedes descargar nuestra app para android o apple</p>
+		<div class="app-store">
+			<img src="/media/images/google-store.png" class="app-icon" alt="icono google store">
+			<img src="/media/images/apple-store.png" class="app-icon" alt="icono apple store">
 		</div>
 		<p>Siguenos en:</p>
 		<div class="logo-promo-container">
