changed burger icon

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<!-- nav mobile -->
 			<div class="mobile-nav show-on-mobile" role="navigation">
 				<div class="logo-container">
-					<img src="/media/images/menu-hamburguesa-rayas.png"	class="logos" alt="menu hamburguesa blanco">
+					<img src="/media/images/menu-hamb-blanco.png" class="logos" alt="menu hamburguesa blanco">
 				</div>
 				<div class="search-container">
 					<input type="search" name="search" id="searching" placeholder="Que estas buscando?"
@@ -551,29 +551,31 @@
 		<div class="header-img">
 			<img src="/media/images/drift-car.png" alt="coche azul derrapando">
 		</div>
-		<div class="forum-tittle">
-			<h2>Aporte de la comunidad</h2>
-		</div>
-		<div class="forum-container">
-			<div class="feature">
-				<h3>tutoriales</h3>
-				<p>descubre aqui montajes, configuraciones...</p>
-				<a href="#">ver tutoriales</a>
+		<div class="forum-contain">
+			<div class="forum-tittle">
+				<h2>Aporte de la comunidad</h2>
 			</div>
-			<div class="feature">
-				<h3>Consejos</h3>
-				<p>tip´s y recomendaciones de la comunidad</p>
-				<a href="#">ver consejos</a>
-			</div>
-			<div class="feature">
-				<h3>Galeria</h3>
-				<p>Explora nuestra galería y descubre más.</p>
-				<a href="">ver galeria</a>
-			</div>
-			<div class="feature">
-				<h3>Setup´s</h3>
-				<p>configuraciones de otros usuari@s</p>
-				<a href="">ver setup´s</a>
+			<div class="forum-container">
+				<div class="feature">
+					<h3>tutoriales</h3>
+					<p>descubre aqui montajes, configuraciones...</p>
+					<a href="#">ver tutoriales</a>
+				</div>
+				<div class="feature">
+					<h3>Consejos</h3>
+					<p>tip´s y recomendaciones de la comunidad</p>
+					<a href="#">ver consejos</a>
+				</div>
+				<div class="feature">
+					<h3>Galeria</h3>
+					<p>Explora nuestra galería y descubre más.</p>
+					<a href="">ver galeria</a>
+				</div>
+				<div class="feature">
+					<h3>Setup´s</h3>
+					<p>configuraciones de otros usuari@s</p>
+					<a href="">ver setup´s</a>
+				</div>
 			</div>
 		</div>
 	</section>
