changed tranparent cards and features

--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
 			</div>
 		</div>
 	</section>
+	<div class="divisor-blue"></div>
 	<!-- section | near you -->
 	<section class="near-you" id="near-you">
 		<div class="news-container">
