created start session

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						class="searcher">
 				</div>
 				<div class="inicio-sesion">
-					<a href="inicio-sesion">
+					<a href="/start-session.html">
 						<img src="/media/images/ini-icon.jpg" class="logos" alt="icono login">
 					</a>
 				</div>
@@ -67,7 +67,7 @@
 				</div>
 				<div class="button-container">
 					<button class="button-ini">
-						<a href="inicio-sesion">Registrate o Inicia sesion
+						<a href="/start-session.html">Registrate o Inicia sesion
 						</a>
 						<img src="/media/images/ini-icon.jpg" class="icon" alt="icono inicio sesion">
 					</button>
