working progres, form style

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 	<!-- Standard Meta Tags -->
 	<title>RC BAZAAR | Your Second-Hand Market for Radio Control</title>
-	<meta name="description" content="Full Stack Developer | React Native | Node.js 
-		| Javascript | Typescript | React | HTML | CSS." />
+	<meta name="description" content="#" />
 	<title>RC BAZAAR</title>
 </head>
 
