created register and made some changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+	<div id="top"></div>
 	<!-- nav | mobile + desktop + aviso -->
 	<nav>
 		<div class="nav-container">
@@ -101,7 +102,7 @@
 			<h2>¡Vende lo que no usas y gana un dinero extra en RC BAZAAR!</h2>
 			<div class="view-button">
 				<button class="button-view">
-					<a href="#">VENDER YA</a>
+					<a href="/start-session.html">VENDER YA</a>
 				</button>
 			</div>
 		</div>
@@ -595,6 +596,7 @@
 	</section>
 	<!-- section | promo -->
 	<section class="promo">
+
 		<p>RC BAZAAR es una comunidad para los entusiastas del radiocontrol, donde puedes comprar, vender, compartir,
 			aprender y mucho mas.
 		</p>
@@ -618,4 +620,7 @@
 			<img src="/media/images/logo-instagram.png" class="logos" alt="logo instagram">
 		</div>
 	</section>
+	<a href="#top" class="back-to-top">
+		<button>back to top</button>
+	</a>
 </body>
