--- a/start-session.html
+++ b/start-session.html
@@ -42,7 +42,11 @@
 				<div class="division-white"></div>				
 				<div class="start-session">
 					<h2 class="user">¿No tienes cuenta?</h2>
-					<button class="button-ini">Regístrate</button>
+					
+						<button type="submit" class="button-ini">
+							<a href="register-formulary.html">Registrate! es gratis!</a>
+						</button>
+					
 				</div>
 				<div class="division-white"></div>
 				<div style="padding: 20px 0;">
