fixed links, button back to up, styled start sesion

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 			de tu hobby de forma más sostenible y económica.</p>
 		<div class="view-button">
 			<button class="button-view">
-				<a href="#">Registrate! es gratis!</a>
+				<a href="/register-formulary.html">Registrate! es gratis!</a>
 			</button>
 		</div>
 		<p>Puedes descargar nuestra app para android o apple</p>
@@ -620,7 +620,10 @@
 			<img src="/media/images/logo-instagram.png" class="logos" alt="logo instagram">
 		</div>
 	</section>
+	<!-- boton subida -->
 	<a href="#top" class="back-to-top">
-		<button>back to top</button>
+		<button>
+			<img src="/media/images/up-arrow.png" alt="flecha arriba">
+		</button>
 	</a>
 </body>
