--- a/start-session.html
+++ b/start-session.html
@@ -49,12 +49,18 @@
 					
 				</div>
 				<div class="division-white"></div>
-				<div style="padding: 20px 0;">
-					<h2 class="user">o Inicia sesion con tu cuenta desde</h2>
-					<div class="start-session">
-						<img src="google" alt="google">
-						<img src="facebook" alt="facebook">
-						<img src="" alt="tu cuenta de bazaar">
+				<div class="extern">
+					<h2>o Inicia sesion con tu cuenta desde</h2>
+					<div class="extern-container">
+						<a href="#">
+							<img src="/media/images/logo-google.png" class="start-icons" alt="google">
+						</a>
+						<a href="#">
+							<img src="/media/images/logo-fb-write.png" class="start-icons" alt="facebook">
+						</a>
+						<a href="#">
+							<img src="/media/images/rc-bazaar-white.png" class="start-icons" alt="tu cuenta de bazaar">
+						</a>
 					</div>
 				</div>
 			</div>
