created started session page, changed styles of formulary

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 							<li><a href="#news">NOVEDADES</a></li>
 							<li><a href="/galery.html">GALERIA</a></li>
 							<li><a href="#forum">COMUNIDAD</a></li>
+							<li><a href="/register-formulary.html">REGISTRATE</a></li>
 						</ul>
 					</div>
 				</div>
